# graphthewy

./: .travis.yml  CMakeLists.txt  FindCriterion.cmake  README.md
docs/: README.md
src/include/: GraphthewyCycle.hpp  GraphthewyModel.hpp
tests/: CMakeLists.txt  test_char.cpp  test_d_char.cpp  test_d_int.cpp  test_d_string.cpp  test_d_ullint.cpp  test_int.cpp  test_string.cpp  test_ullint.cpp
